--- a/F-Discord-Injections/FuckIDiscordInjections/Form1.resx
+++ b/F-Discord-Injections/FuckIDiscordInjections/Form1.resx
@@ -701,10 +701,123 @@
   <metadata name="Form1Elipse.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>325, 17</value>
   </metadata>
+  <data name="HackerBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwABOvQAATr0AUVPlLMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAY0klEQVR4Xu3dfbBtZ13Y8bX3OiG8RV5KDN6cvda5yaUZCNCWwz1rrXNv4hWxcicB2+IVK0Vr66gd
+        VFoQ0f/iDGoYibw4o7W2lDLtCPavgg21L6LGlwoExqnagZqakkFRTABLNPdVn33PgyT7rntzztlr77P2
+        ej7fmc+EP8jNWc9a9/x+Z5+3TJIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZKkhba5eVW23rwgn9SvGhfNDwU/
+        M5rUd+dF/Vvhf983LuqHor8EYCG+9H7296fve6fvg8dF9S+DH5y+b84m28+/+L5amqsbNp8WHqhXhOH+
+        9vCwfSw4HbQ9kAD0x/R99b1hKXhbWBJePn1fHt+rS5dtlE22bgkPzlvCQ/Ph8M9z8WECYHWd23mltr4z
+        K6rjF9/XSxe74XgRHow3Bf8nPiwADNengjuz9eo5cQooqY6cvDov6+8IW+GvzzwYAKThQpgBv5aXzT+d
+        zoQ4HTTYrnvhU8ZF9bpw4x+YeRAASNdngjuyI9VXxGmhwXTTsWvi4P+jR91wAHi0zwZ3ZMXxZ8TpodXt
+        VD4uq9eG4f+5mZsMAJfz4HhSf3cYIuOdWaLVqqxflJf1/2y5sQCwG/dmG1Udp4p638aJp4eb9o7At/EB
+        MK/z46J5T3Zo81lxyqiXrTdfHW7Wp2duHgDM6zNrRf3SOG3Uo0bxi/zOztwwAOjK9JXlO8LM8bUBvejZ
+        t1w7Kqr/MnOTAGAhRkXzP7Jy86viFNKBtN5shZvhW/sAWLZPZ5OtF8dppGW2VjRfG27An83cEABYli+u
+        rTcvi2NJyygvm28JB39m5kYAwLKdzifVN8fxpEU2LpvvCQd+fuYGAMBBuTAuqzfEMaVFFIb/G1sOHgAO
+        niVgMeVF9Y/CAV+45MABoB8u5JPq2+PYUhflRXN7OFjf4w9A353LJ83fi+NLc7VR1eFAvzhzwADQV3+e
+        FdXxOMW0rybbN4aDfGjmYAGg7/4026g34jTTnjpy8uq8qD/acqgA0Hthhn04u/nmJ8Sppt02ntQ/2Xag
+        ALAyyvon4ljTbgpb08vDwfmKfwBW3QVfFLjbyq3D46L6XMshAsAqejA7vF3GKafLNSrq/9xyeACwsqa/
+        tTaOObWVF82ptoMDgFXnUwGX69Dmk8MB3T97YAAwEJ/Krj3x1Dj19KXGk/qtLYcFAAPS/Fgce7pYUT0v
+        HIxf7wvA0J3ODh+7KU4/hQN578wBAcBQ/fs4/hJv58f9nps5HAAYqnPZevWcOAXTbVzW72o5HAAYsn8V
+        x2CiHTo6CYdweuZQAGDoziT9w4H8vH8AEvaOOA4Ta715Urj4z88cBgCk4gvTWRinYjrlZfMtLYcBAMnI
+        i/qb4lhMp1FZf7DtMAAgFaOi/kAci4l0uLouXPjZ2YMAgMScnc7EOB2H37is3tByCACQou+L43H45ZP6
+        N1sOAACSkxf1PXE8Drybjl0TLtjL/wCw40wSvyUwL5rbWy4eAJK1tt68LI7J4TYu67vaLh4AEvaWOCaH
+        27ioPt5y4QCQrLxoPhLH5EBbb54ZLvT87IUDQOLOZcXxZ8RpObzWJtXfbbloAEjeWrn1kjguh5fv/weA
+        y6leF8fl8AoX+G8vvWAAYDyp/3Ucl8Nr+sMOWi8aABI3mtQfiuNyeIULfGD2ggGAi+6P43JgbW5eFS7O
+        dwAAQLtzWXZiLU7NATU5dqjlYgGAaJi/GXC9eUHbxQIAO7Kiel6cmgNqsn1r28UCADvCAnA8Ts3hNP1F
+        B20XCwDsWCuqr4tjczjlk/oVbRcLAOyY/sbcODaHU15Wr2y7WABgx3RWxrE5nMJWc6rtYgGAHdNZGcfm
+        cLIAAMCVWQAAIEEWAABIkAUAABJkAQCABFkAACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQB
+        AIAEWQAAIEEWAABIkAUAABJkAQCABFkAACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAE
+        WQAAIEEWAABIkAUAABJkAQCABFkAACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAA
+        IEEWAABIkAUAABJkAQCABFkAACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEEW
+        AABIkAUAABJkAWDZfi9457is3pAX1WvW1puX5WX96vGk/hfjonpb8PGZ/z8AC2ABYBn+bxjwr8+KozfE
+        W3Tlrq/Ww4Lw2vDv/e+ZPweAjlgAWKSHpoM8y06sxVuz18Z5UX9b+HP+aObPBWBOFgAWIgzue7JDRyfx
+        lszXs2+5djSp72777wCwPxYAFuF92ZGTV8fb0VGn8nFZ/1TLfwuAfbAA0KlRUb9/jpf8H7dxUf1o238X
+        gL2xANCl/5WtN0+Kt2Fhjcv6rpb/NgB7YAGgK2fC8H9BvAULzxIAMB8LAB2p3haPf2lZAgD2zwJAFx7J
+        ys2vise/1HxNAMD+WADows/Hoz+QvBIAsHcWAOY2/ZG+8egPLK8EAOyNBYB5nc9u3P7KePQHmiUAYPcs
+        AMynrD8Rj70X+XQAwO5YAJhLXta/HI+9N3klAODxWQCY13vjsfcqSwDAlVkAmNe747H3Lp8OALg8CwBz
+        GZX1B+Ox9zKvBAC0swAwp+rj8dh7myUA4FIWAOb1+UX+9r+u8ukAgMeyADC3bLJ9azz6XueVAIAvswDQ
+        hbfEo+99lgCAHRYAOtDcl2Wn8nj8vc+nAwAsAHQkn9Svise/ElkCgNRZAOhIc1+2ceKJ8RasRD4dAKTM
+        AkB3wkfV8RasTJYAIFUWALp0YRUfKJ8OAFJkAaBrj6wVzdfGW7EyWQKA1FgAWISHV3IJ8OkAICEWABbF
+        EgDQYxYAFskSANBTFgAWzRIA0EMWAJbBEgDQMxYAlsUSANAjFgCWyRIA0BMWAJbNEgDQAxYADoIlAOCA
+        WQA4KJYAgANkAeAgWQIADogFgINmCQA4ABYA+sASALBkFgD6whIAsEQWAPrEEgCwJBYA+sYSALAEFgD6
+        yBIAsGAWAPrKEgCwQBYA+swSALAgFgD6zhIAsAAWAFaBJQCgYxYAVoUlAKBDFgBWiSUAoCMWAFaNJQCg
+        AxYAVpElAGBOFgBWlSUAYA4WAFaZJQBgnywArDpLAMA+WAAYAksAwB5ZABgKSwDAHlgAGBJLAMAuWQAY
+        GksAwC5YABgiSwDA47AAMFSWAIArsAAwZJYAgMuwADB0lgCAFhYAUmAJAJhhASAVlgCAR7EAkBJLAEBk
+        ASA1lgCAwAJAiiwBQPIsAKTKEgAkzQJAyiwBQLIsAKTOEgAkyQIAlgAgQRYA2GEJAJJiAYAvswQAybAA
+        wGNZAoAkWADgUpYAYPAsANDOEgAMmgUALs8SAAyWBQCuzBIADJIFAB6fJQAYHAsA7I4lABgUCwDsniUA
+        GAwLAOyNJQAYBAsA7N3Da+XWS+LjtjKNy/qulmsBEmUBgP1ZxSVgNC6qf9dyLUCCLACwf6v36YAjJ68O
+        b/e9M9cBJMgCAPNZvVcCiup54e0+M3MdQGIsADC/lVsCwtv8zplrABJjAYBurNYScOjoJLzNXgWAhFkA
+        oDsr9TUBo6L+Ty3XACTCAgDdWplXAvKiek3L2w8kwgIA3VuNJWDn0wBtbz+QAAsALMZKfDogvJ1fnHm7
+        gURYAGBxer8EhLfx92feZiARFgBYrF4vAXlR39PyNgMJsADAYvV9Afj1lrcZSIAFABZnBT4F0NzX8nYD
+        CbAAwGKsyhcBPjzzdgOJsABA91bj2wBvOF60vO1AIiwA0K0V+kFAzbe2vP1AIiwA0J2VeNn/S42K+gMt
+        1wAkwgIA3Vip4Z9dX62Ht/n0zDUACbEAwPxW6zcBhsaT+idbrgNIiAUA5rNywz+bbD8/vN1nZ64DSIwF
+        APZvtV72n3bk5NXh7f7YzHUACbIAwP6s3kf+WTYaF817Wq4FSJAFAPZuFYd/Ni7ru1quBUiUBQD2ZvVe
+        9g+Ni+pHW64FSJgFAHbP8AcGwwIAu2P4A4NiAYDHZ/gDg2MBgCsz/IFBsgDA5Rn+wGBZAKCd4Q8MmgUA
+        LmX4A4NnAYDHMvyBJFgA4MsMfyAZFgDYYfgDSbEAgOEPJMgCQOoMfyBJFgBSZvgDybIAkCrDH0iaBYAU
+        Gf5A8iwApMbwBwgsAKTE8AeILACkwvAHeBQLACkw/AFmWAAYOsMfoIUFgCEz/AEuwwLAUBn+AFdgAWCI
+        DH+Ax2EBYGgMf4BdsAAwJIY/wC5ZABgKwx9gDywADIHhD7BHFgBWneEPsA8WAFaZ4Q+wTxYAVpXhDzAH
+        CwCryPAHmJMFgFVj+AN0wALAKjH8ATpiAWBVGP4AHbIAsAoMf4COWQDoO8MfYAEsAPSZ4Q+wIBYA+srw
+        B1ggCwB9ZPgDLJgFgL5Z0eHf/FjLtQD0lgWAPjH8AZbEAkBfGP4AS2QBoA8Mf4AlswBw0Ax/gANgAeAg
+        Gf4AB8QCwEEx/AEOkAWAg2D4AxwwCwDLZvgD9IAFgGUy/AF6wgLAshj+AD1iAWAZHl4rt14Sb8/KNC7r
+        u1quhb05G9wf3JsX9UdJ1/QZiM/C9Jloe1ZYMgsAi2b4Jyb8/fvIuKzekJXN38k2N6+KRyrtNH0mwrMR
+        npHvj4tB63PE4lkAWCTDPyGjon5/Ntl6cTxGaXdNto+GZ+cDbc8Ui2UBYFEM/3R8Ji/rk/EIpX2Vl1u3
+        hWfpj2eeLRbIAsAi+IK/VJT1b2cb9UY8Qmm+rq/WfVpgeSwAdO0vfOSfhlHR/GJ23QufEo9Q6qZrTzx1
+        VNT/te2Zo1sWALp0IS+qb4y3YWUy/Pfld7Mj1VfEI5S67YbNp4Vn7Pdmnjk6ZgGgO5P6rfEWrEyG/748
+        mE22b4xHKC2m9eZIeNYemnn26JAFgI4092UbJ54Yb8FK5HP++xP+fn1rPEJpoY3L6rVtzyDdsADQiVV7
+        kHzkvz/hPn8kHN9o5xSlBbe5eVX4u/qJtmeR+VkA6ED46D87lcfj732G//7lZf0P4jFKSymf1K9qexaZ
+        nwWALtwZj773edl/Ln/sJ/tp6e28CvAnLc8jc7IAMLdssn1rPPpe5yP/uf1sPEppqYW/u+9qeR6ZkwWA
+        eX0+y06sxaPvbYb//PKyfnU8Tmmp5UX1mrZnkvlYAJjXvfHYe5uX/buRHd76W/FIpeVW1i9qeyaZjwWA
+        uYzK+oPx2HuZj/y7kxXHnxGPVVpu680z255J5mMBYF7vjsfeuwz/bq3Cp3o00KZfCNjyTDIfCwDzel88
+        9l7lZf/urdoPetKAuu6FT2l7JpmPBYC55EX1K/HYe5OP/BcjW2+uj0csLbdDRydtzyTzsQAwr0/GY+9F
+        hv/iZBv1iXjM0lKb/obRtmeS+VgAmNf57HB1XTz6A83L/gv3A/GopaUW/m7/UMvzyJwsAMwtL+pvi0d/
+        YPnIf/FGRf3f4nFLSy08e7/U9kwyHwsAXfj5ePQHkuG/NOd8HYCW3vXVenj2zs88i3TAAkAXHskmxw7F
+        419qXvZfsrJ+czx6aSmFv+Nvb30WmZsFgI40b4/Hv7R85H8gvtCXr/lQAhVHbwjP3OmZZ5COWADoypls
+        vXlBvAULz/A/QJP6P8TbIC20UdH8x9ZnkE5YAOhQ8zvZoc0nx9uwsAz/Hiib74m3Q1pI4Tn73kueOzpl
+        AaBTo6L+wCJ/ZKzP+ffGubysT8bbInXaWlG/NDxjZ2eeOTpmAWAR3pcdOXl1vB0ddSoPf+5Pz/x3OFh/
+        Fv6u3R5vkNRJ02dq+mzNPGssgAWAhciL+p7pt+/EWzJfhzafNZrUd7f9dzhw58dl88Z4p6S5Cs/Tmy4+
+        U+3PGh2zALBID46L5rumH73HW7PXRnlZvzr8GX/Y8mfTI2FB+1A22XpxvG/S3ppsHw1/13+57dlicSwA
+        LF5Zf2I8qb97179P/qZj10x/umD493679c+jry6Ee/ZzWVEfC3dxtHMzpcs2mj4r4bl578Vnp/2ZYoEs
+        ACzT6elHimFIvDksBP8sn1TfED5qvCUM+5fnRfWd46L64VHR/GL4//35zL/H6vlU8O5x0fzzvNy6LXyE
+        d2tWVJskLDwD02dh+kzsPBv1A/FZ4YBYAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEEWAABIkAUAABJkAQCA
+        BFkAACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEEWAABIkAUAABJkAQCABFkA
+        ACBBFgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEEWAABIkAUAABJkAQCABFkAACBB
+        FgAASJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEEWAABIkAUAABJkAQCABFkAACBBFgAA
+        SJAFAAASZAEAgARZAAAgQRYAAEiQBQAAEmQBAIAEWQAAIEHDXADK6pVtFwsA7JjOyjg2h1M+qV/RdrEA
+        wI68aG6PY3M4ra03L2u7WABgx1pRfV0cmwNqsn1r28UCADuyojoep+aAmmw/v+1iAYAdWVk/N07NAbVx
+        9NltFwsA7Miefcu1cWoOqM3Nq8LFnZ+9WADgonNZdmItTs1hFS7ugZmLBQB23B/H5fDKi+ZXWy4YAJI3
+        mtQfiuNyeI3L+l1tFw0A1D8bx+XwGk/q17dcMABQ1N8Xx+XwWivql7ZcMAAkb62sviaOywG23jwzXKTv
+        BACAxzqXbZx4epyWwyxc5MdmLhoAkpYX9YfjmBxu40n91raLB4CE3RnH5HDLy63bWi4cAJK1Nmm+Po7J
+        AXfTsWvCxZ6ZvXgASNTp7LoXPiVOyWGXF9VvtBwAACRn+kPy4ngcfn4eAAD8te+N4zGBbtz+ynDBZ2cO
+        AABSczY7XF0Xp2MajSb13S0HAQDJGBX1++NYTKd80vzDtsMAgFTkRXMqjsWE2jjxxHFRfa7tQAAgAZ/P
+        1psnxamYVuHi3zlzGACQiObtcRwm2KGjk3AIpy89FAAYtDPZDceLOA3TbDyp/k3LwQDAgDU/E8dgwk22
+        bwyH4VsCAUjFuWy9ek6cgmk3LuufazkgABig5j1x/Ckr6+eGQ/H7AQAYutPZ9Vt/M04/TQuH8paZQwKA
+        YSnrN8exp7/u0OaTw+H8wSWHBQBDMKn/XzK/9W+v5WX1ytZDA4AVl0/qV8Rxp7ZGRfMLbQcHAKtqVNYf
+        jGNOl22j3giH9dDs4QHAivrT6Q++i1NOVyovmtvDgV2YOUAAWDUX8kn1DXG8aTdNf0Zyy0ECwOqYND8e
+        x5p23ebmVXlR/UbrgQJAz+VF/VvZzTc/IU417ani6A3hEB+cPVQA6LnPZoe3yzjNtK/Wm61wkF+cOVgA
+        6KuHs7LZjlNM85SXW7eFA/ULgwDouzN5WZ+M40tdFA701eFgfWcAAH11IZ/U/ziOLXXZuKy+v+XAAeDg
+        TerXx3GlRRSWgNeGgz5/ycEDwMG4YPgvqbxs/n448L+YuQEAsGyn80n1zXE8aRmtlVsvCQf/hZkbAQDL
+        8v/XJs3Xx7GkpTbZenG4AZ+euSEAsGgPZGX9ojiNdCAd2nzWaFLf3XJzAKBzo6L+79nh6ro4hXTAjcZF
+        9bpwY87M3igA6Mj059HcEWbOeGf0qD/t/NTAP3jUzQKALjyQFdXxOG3UyzZOPD3cqHcE5x514wBgP86P
+        i+Y92fVbfyNOGfW+je2/7bcJArBfeVF/dPrKcpwqWrHGYXP7rnAj/UZBAHbrs3lZf8d0huyMEq1u1554
+        6s4XCTZ/2HKjAeAvx2X9J+Gfd0w/lRynhwbTkZNX50X1neEGP/CYmw5Ayj4TvCk7tPnkOC002KaLQNn8
+        k7yo7wk33W8YBEjPhbxofjWfVN+e3XzzE+J0UFIdOjoJD8KbxmX9iZmHA4DhuT+4M1tvjsQpIIXKZjss
+        Aj+ST+rfDA/I9Ac+tD08AKyOsxe/I6ys35xtVHV8by9doZuOXZMXze3hobkr/PMj4SF6ZOahAqB/Hrn4
+        PntSvzUvt26bvi+P79Wl/XZiLSuq54UH61R4wH4gLAY/NSqaX4ivFnwymH6r4UPB+aDtoQRg/6bvW6fv
+        Y6fvaz85fd87fR88fV88Lps3ho/yvzEr6+defF8tSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIk
+        SZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSZIkSdLCyrK/AhUE
+        dCMJ8nC3AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="LogsBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAA3BJREFUeF7tnT1rFVEURaM/QBBL0dYiNiqks0ghYhcUZhLt/A0iKTJvWu3UpIoi
+        DAAACwwBP0AiyAAAA3BJREFUeF7tnT1rFVEURaM/QBBL0dYiNiqks0ghYhcUZhLt/A0iKTJvWu3UpIoi
         FhJQSWNE8yW+eQGxEURtBJEYC8WPRkFEMeO9soXLuBtByL6Hs2D1e91DXlLlDTmO4ziO4ziO4ziO87+Y
         HFvZVZXNmV7R3K3KwdteOfgWbHO2KgZvqnLtGBJVabf9fviy+coisrcYbCBUj7put4eRN/4abUzk6lEV
         zTk22JrI1WJqfG04HOAnG2xNJGsRPvNvsrEWRbIO9alHO8JfO9/ZWIsiW4e67B9nQ62KbB3C38czbKhV
